--- a/Kuno/Kuno.csproj
+++ b/Kuno/Kuno.csproj
@@ -27,4 +27,12 @@
     <DocumentationFile>bin\Release\net461\Kuno.xml</DocumentationFile>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.6'">
+    <PackageReference Include="System.Security.Claims" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+  </ItemGroup>
+
 </Project>
