--- a/Kuno.Tests/Kuno.Tests.csproj
+++ b/Kuno.Tests/Kuno.Tests.csproj
@@ -6,7 +6,7 @@
     <Authors>Kuno Contributors</Authors>
     <Company />
     <Product>Kuno Framework</Product>
-    <Description>A test library for Kuno that contains scenarios, attributes and other shared features.</Description>
+    <Description>A test library for Kuno that contains attributes, scenarios and other shared features.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.6|AnyCPU'">
