--- a/Kuno.Tests/Kuno.Tests.csproj
+++ b/Kuno.Tests/Kuno.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net461; netstandard1.6</TargetFrameworks>
-    <Version>0.0.6</Version>
+    <Version>0.0.8</Version>
     <Authors>Kuno Contributors</Authors>
     <Company />
     <Product>Kuno Framework</Product>
@@ -10,6 +10,8 @@
     <PackageProjectUrl>http://docs.kuno.io/</PackageProjectUrl>
     <PackageIconUrl>http://docs.kuno.io/assets/icons/icon-128x128.png</PackageIconUrl>
     <PackageTags>kuno;test;</PackageTags>
+    <PackageLicenseUrl>https://github.com/kuno-framework/kuno/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.6|AnyCPU'">
