--- a/Kuno/Kuno.csproj
+++ b/Kuno/Kuno.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>net461; netstandard1.6</TargetFrameworks>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
-    <Version>0.0.7</Version>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <Version>0.0.8</Version>
     <Authors>Kuno Contributors</Authors>
     <Company />
     <Product>Kuno Framework</Product>
@@ -12,6 +12,7 @@
     <PackageIconUrl>http://docs.kuno.io/assets/icons/icon-128x128.png</PackageIconUrl>
     <PackageProjectUrl>http://docs.kuno.io/</PackageProjectUrl>
     <PackageTags>kuno;</PackageTags>
+    <PackageLicenseUrl>https://github.com/kuno-framework/kuno/blob/master/LICENSE</PackageLicenseUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.6|AnyCPU'">
@@ -31,6 +32,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
     <DocumentationFile>bin\Release\net461\Kuno.xml</DocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="Services\Registry\ServiceRegistry.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.0.0" />
